[Fix] dropdown-menue covered by other DOM at header. [Add] flash message. [Clean] details.

--- a/app/assets/stylesheets/user/application.scss
+++ b/app/assets/stylesheets/user/application.scss
@@ -40,6 +40,38 @@
         }
       }
     }
+    &--dropdownMenue {
+      display: none;
+      position: absolute;
+      text-align: left;
+      background-color: white;
+      z-index: 10;
+      &:hover {
+        display: block;
+      }
+      li {
+        display: block;
+        width: 180px;
+        margin: 0;
+        border: thin solid black;
+        border-top: none;
+        padding: 2px 10px;
+        color: black;
+        &:hover {
+          color: black;
+        }
+        &:first-child {
+          background-color: #aaa;
+        }
+        a {
+          color: black;
+          &:hover {
+            color: purple;
+            text-decoration: none;
+          }
+        }
+      }
+    }
   }
   &__layouts {
     &--leftSection {
@@ -78,6 +110,16 @@
       border: thin solid red !important;
       background-border: rgba( 100, 0, 0, 0.2 ) !important;
       background-color: rgba( 255, 0, 0, 0.1 ) !important;
+    }
+  }
+  &__flash {
+    width: 100%;
+    // width: 100vw;
+    text-align: center;
+    // padding: 1em 0;
+    &--notice {
+      color: whitesmoke;
+      background-color: deepskyblue;
     }
   }
 }
